Add public health endpoint
