# app/src/generated/openapi.json
@@ -1,6 +1,20 @@
 {
   "openapi": "3.0.0",
   "paths": {
+    "/health": {
+      "get": {
+        "operationId": "GetHealthApi_get",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "GetHealthApi"
+        ]
+      }
+    },
     "/access/directories": {
       "get": {
         "operationId": "GetAccessibleDirectoriesApi_get",
